# mbd-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  index.js  package.json  rollup.config.js
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
tests/: web.rs
