[package]
name = "mbd"
version = "0.1.1"
authors = ["Jochen Görtler <web@goertler.email>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust implementation of the modified band depth that also compiles to WASM."
keywords = ["statistics", "data-depth"]
categories = ["algorithms", "science", "wasm"]
homepage = "https://github.com/grtlr/mbd-wasm"
repository = "https://github.com/grtlr/mbd-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.73"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.23"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
